--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 4</title>
+    <title>Task 5</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/mobile.css">
 </head>
@@ -27,10 +27,15 @@
         <div class="card">
             <div class="desc">
                 <h2 class="title">Hi, Welcome to my Portfolio</h2>
-                <div class="detail-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus animi atque voluptas commodi fuga cum consectetur velit assumenda eum recusandae aliquam nisi debitis impedit, vitae iure quisquam placeat! Explicabo sint eligendi alias quos. Quaerat, qui porro, deleniti officiis omnis voluptates quae sit corrupti, nemo minima expedita! Suscipit architecto modi blanditiis dolorem aperiam animi, nesciunt voluptates magni! Saepe, consequatur suscipit nostrum a alias officiis animi, accusamus, ipsum placeat neque tenetur quibusdam!</div>
+                <div class="detail-desc">Saya I Gede Bagus Arya Negara, lulusan SMA PGRI 4 DENPASAR tahun 2020. Aktivitas saat ini aktif
+                    sebagai mahasiswa di INSTIKI. Saya memiliki minat berkarir sebagai Frontend Developer dan saya
+                    memiliki kemampuan dalam mengembangkan tampilan dan interaksi antarmuka pengguna untuk
+                    aplikasi web. Saya berkomitmen untuk menghasilkan kode yang efisien, mudah dipelihara, dan
+                    memiliki performa yang optimal. Saya juga senang bekerja dalam tim dan memiliki kemampuan
+                    untuk berkomunikasi dengan baik dengan anggota tim yang lain untuk mencapai tujuan bersama.</div>
                 <div class="button-desc">
                     <a class="card-button" href="contact.html">Contact</a> 
-                    <a href="" class="download">Download CV <img src="./assets/images/svg/download.svg" alt="" width="17"></a>
+                    <a href="CV (3).pdf" download="/assets/CV (3).pdf"  class="download">Download CV <img src="./assets/images/svg/download.svg" alt="" width="17"></a>
                 </div>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/i-gede-bagus-arya-negara-2a7516274"><img src="./assets//images/svg/linkedin.svg" alt=""></a>
